# TranslationBag

./: .gitignore  .pre-commit-config.yaml  README.md  TTSBagLuaScript.lua  TTSBagTemplate.json  TTSCampaignBagLuaScript.lua  TTSPlayerBagLuaScript.lua  TranslationBagLuaScript.lua  TranslationBagTemplate.json  config.json  constants.py  main.py  pyproject.toml
modules/: gui.py  tts_templates.py
